2007-06-06 Xavier Claessens  <xclaesse@gmail.com>

	* po/POTFILES.in: Updated with new files.

2007-06-06 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-status-icon.c:
	* libempathy-gtk/empathy-subscription-dialog.glade:
	* libempathy-gtk/empathy-contact-widget.c:
	* libempathy-gtk/gossip-contact-list-view.c:
	* libempathy-gtk/empathy-subscription-dialog.c:
	* libempathy-gtk/Makefile.am:
	* libempathy-gtk/empathy-subscription-dialog.h:
	* libempathy/empathy-tp-contact-list.c: New dialog:
	EmpathySubscriptionDialog. It uses EmpathyContactWidget to display
	information about the contact who wants to get your presence. This
	dialog appears when clicking on the status icon when it blinks. You
	can also remove contacts when right-click on it in the roster.

2007-06-06 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-status-icon.c:
	* libempathy-gtk/empathy-contact-widget.glade:
	* libempathy-gtk/empathy-contact-widget.c:
	* libempathy-gtk/empathy-contact-widget.h:
	* libempathy-gtk/Makefile.am: New widget: EmpathyContactWidget. It
	displays information about a contact, it can be used in any kind of
	dialog which needs to display contact information like alias, groups,
	avatar, etc. If the contact is the selfcontact information are editable.

	* libempathy/empathy-tp-contact-list.c: Do not take care of subscription
	changes.

	* libempathy/gossip-contact.c: Use
	gossip_presence_state_get_default_status (MC_PRESENCE_OFFLINE)
	when there is no presence.

2007-06-06 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-status-icon.c: Add support for blinking when
	there is an event. Make use of EmpathyIdle for presence handling. Add
	an event when a contact requets subscription.

	* libempathy-gtk/gossip-contact-list-store.c:
	* libempathy-gtk/gossip-contact-list-view.c:
	* libempathy/empathy-contact-manager.c:
	* libempathy/empathy-tp-contact-list.c:
	* libempathy/empathy-tp-chatroom.c:
	* libempathy/empathy-contact-list.c: